[gd_scene load_steps=25 format=3 uid="uid://w5wqsvii4ld2"]

[ext_resource type="Script" path="res://Noem V1/noem_v_1.gd" id="1_y0lc8"]
[ext_resource type="Texture2D" uid="uid://csfnrn82vro3x" path="res://Noem V1/Sprites/Movimiento V1/Noem Spritesheet basico V1-3.png" id="2_rjyf1"]
[ext_resource type="Animation" uid="uid://ebfrdosqoib" path="res://Noem V1/Noem animaciones/Movimiento Basico V1/Idle.res" id="3_cp6ct"]
[ext_resource type="Animation" uid="uid://ob5v73o5a0pd" path="res://Noem V1/Noem animaciones/Movimiento Basico V1/Walk.res" id="4_hepka"]
[ext_resource type="Texture2D" uid="uid://cpo83mlhxlnaq" path="res://Noem V1/Sprites/Noem Spritesheet basico V1-4 izq.png" id="4_rhxj1"]
[ext_resource type="Animation" uid="uid://rto4joclywuh" path="res://Noem V1/Noem animaciones/Movimiento Basico V1/Transition.res" id="5_kda1f"]
[ext_resource type="Animation" uid="uid://cef6soik8i0hw" path="res://Noem V1/Noem animaciones/Movimiento Basico V1/Transition_Idle_Idle.res" id="6_547ln"]
[ext_resource type="Script" path="res://Noem V1/Animaciones.gd" id="6_dd6xv"]
[ext_resource type="Texture2D" uid="uid://cp58gnk8f2y3x" path="res://Noem V1/Sprites/Movimiento V1/Noem Spritesheet basico V1-2 IZQ.png" id="7_7wwm2"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://leohjmwux110" path="res://Noem V1/Noem animaciones/Movimiento Basico V1/Noem_Animation_StateMachine.tres" id="9_c33at"]
[ext_resource type="Animation" uid="uid://cl1h65tvgqpdj" path="res://Noem V1/Noem animaciones/Movimiento Basico V1/Transition_Idle_Walk.res" id="9_jelbc"]
[ext_resource type="Script" path="res://Noem V1/Movimiento.gd" id="9_smi7y"]
[ext_resource type="Animation" uid="uid://cyjiyybar4vi4" path="res://Noem V1/Noem animaciones/Movimiento Basico V1/Transition_Idle_Walk_izq.res" id="10_4n5pi"]
[ext_resource type="Script" path="res://Noem V1/Controlador.gd" id="13_54x4f"]
[ext_resource type="Script" path="res://Noem V1/Armado.gd" id="14_4mx5i"]

[sub_resource type="Animation" id="Animation_wfcjj"]
resource_name = "Idle_izq"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_rhxj1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_kviug"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_rjyf1")]
}

[sub_resource type="Animation" id="Animation_ely50"]
resource_name = "Transition_Idle_Idle_izq"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_rhxj1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_15ycj"]
resource_name = "Transition_izq"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_7wwm2")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [19, 20, 21, 22, 23, 24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_52q8s"]
resource_name = "Walk_izq"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_rhxj1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8cahn"]
_data = {
"Idle": ExtResource("3_cp6ct"),
"Idle_izq": SubResource("Animation_wfcjj"),
"RESET": SubResource("Animation_kviug"),
"Transition": ExtResource("5_kda1f"),
"Transition_Idle_Idle": ExtResource("6_547ln"),
"Transition_Idle_Idle_izq": SubResource("Animation_ely50"),
"Transition_Idle_Walk": ExtResource("9_jelbc"),
"Transition_Idle_Walk_izq": ExtResource("10_4n5pi"),
"Transition_izq": SubResource("Animation_15ycj"),
"Walk": ExtResource("4_hepka"),
"Walk_izq": SubResource("Animation_52q8s")
}

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_f12wn"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_y0fk7"]
nodes/Noem_Animation_StateMachine/node = ExtResource("9_c33at")
nodes/Noem_Animation_StateMachine/position = Vector2(280, 360)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_f12wn")
nodes/TimeScale/position = Vector2(818, 206)
nodes/output/position = Vector2(1140, 240)
node_connections = [&"TimeScale", 0, &"Noem_Animation_StateMachine", &"output", 0, &"TimeScale"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ny3vh"]
radius = 8.0

[node name="Noem_V1" type="CharacterBody2D"]
position = Vector2(0, -19)
script = ExtResource("1_y0lc8")
speed = 50
metadata/_edit_group_ = true

[node name="Sprite_Noem_V1" type="Sprite2D" parent="."]
position = Vector2(0, 5)
texture = ExtResource("2_rjyf1")
hframes = 16
vframes = 3

[node name="Animaciones" type="AnimationPlayer" parent="Sprite_Noem_V1"]
libraries = {
"": SubResource("AnimationLibrary_8cahn")
}
script = ExtResource("6_dd6xv")

[node name="Control_de_animaciones" type="AnimationTree" parent="Sprite_Noem_V1"]
active = false
tree_root = SubResource("AnimationNodeBlendTree_y0fk7")
anim_player = NodePath("../Animaciones")
parameters/TimeScale/scale = 0.75

[node name="Controlador" type="Node2D" parent="."]
script = ExtResource("13_54x4f")

[node name="Movimiento" type="Node2D" parent="."]
script = ExtResource("9_smi7y")
walk_speed = 1.2
transition_speed = 1.5
transition_idle_speed = 1.2

[node name="Timer_Noem_Quieto" type="Timer" parent="Movimiento"]
wait_time = 4.0
one_shot = true

[node name="Timer_Verdadero_Idle" type="Timer" parent="Movimiento"]
wait_time = 0.2
one_shot = true

[node name="Armado" type="Node2D" parent="."]
script = ExtResource("14_4mx5i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_ny3vh")

[connection signal="animation_finished" from="Sprite_Noem_V1/Control_de_animaciones" to="Movimiento" method="_on_control_de_animaciones_animation_finished"]
[connection signal="timeout" from="Movimiento/Timer_Noem_Quieto" to="Movimiento" method="_on_timer_timeout"]
[connection signal="timeout" from="Movimiento/Timer_Verdadero_Idle" to="Movimiento" method="_on_timer_verdadero_idle_timeout"]
